--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,49 +1,43 @@
 <!doctype html>
 <html lang="fr">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>
-  {% block title %}
-  EcoRide
-  {% endblock %}
-  </title>
+		<title>
+			{% block title %}
+				EcoRide
+			{% endblock %}
+		</title>
 
-<link rel="stylesheet" href="{{ asset('css/global.css') }}">
-<link rel="stylesheet" href="{{ asset('css/accueil.css') }}">
-{% block stylesheets %}
-{% endblock %}
+		<link rel="stylesheet" href="{{ asset('css/global.css') }}">
+		<link rel="stylesheet" href="{{ asset('css/accueil.css') }}"> {% block stylesheets %}{% endblock %}
 
-</head>
+		</head>
 
-<body>
+		<body>
 
- {# En-tête conditionné : tant qu'on n'a pas Security, on se base sur la session "maison" #}
- {% block entete %}
- {% if utilisateur_connecte is defined and utilisateur_connecte %}
- {% include 'fragments/entete_utilisateur.html.twig' %}
- {% else %}
- {% include 'fragments/entete_public.html.twig' %}
- {% endif %}
- {% endblock %}
+			{# En-tête conditionné : tant qu'on n'a pas Security, on se base sur la session "maison" #}
+			{% block entete %}
+				{% if utilisateur_connecte is defined and utilisateur_connecte %}
+					{% include 'fragments/entete_utilisateur.html.twig' %}
+				{% else %}
+					{% include 'fragments/entete_public.html.twig' %}
+				{% endif %}
+			{% endblock %}
 
 
-  {% block body %}
-  {% endblock %}
+			{% block body %}{% endblock %}
 
-  {# Par défaut : pied de page commun #}
-  {% block pied_de_page %}
-    {% include 'fragments/pied_de_page.html.twig' %}
-  {% endblock %}
+			{# Par défaut : pied de page commun #}
+			{% block pied_de_page %}
+				{% include 'fragments/pied_de_page.html.twig' %}
+			{% endblock %}
 
-  {# JS commun menu mobile #}
-  <script src="{{ asset('js/menu_navigation.js') }}"></script>
+			{# JS commun menu mobile #}
+			 <script src="{{ asset('js/menu_navigation.js') }}"></script>
 
-  {% block javascripts %}
-  {% endblock %}
+			{% block javascripts %}{% endblock %}
 
-</body>
-</html>
-
-
+		</body>
+	</html>
